--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.2",
+    "bootstrap": "^5.2.0",
     "next": "^12.0.8",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-slick": "^0.29.0",
+    "reactstrap": "^9.1.4",
+    "remixicon": "^2.5.0",
+    "slick-carousel": "^1.8.1"
   }
 }
